# digmake

./: Cargo.toml  a.txt  client_handshake_data.txt  client_handshake_data_explain.txt  notes.txt  statemachine.txt
src/: lib.rs  main.rs  tests.rs  util.rs
src/edres/: de.rs  error.rs
src/logic/: mod.rs
src/mon/: errors.rs  mod.rs  primitives.rs
src/se/: error.rs  mod.rs  nbt.rs  packet.rs  shared.rs  types.rs
src/se/edres/: de.rs  error.rs  mod.rs  packet.rs  types.rs  varint.rs  varnum.rs
src/se/edres/de/: de.rs  error.rs  mod.rs
src/se/edres/ser/: error.rs  mod.rs  ser.rs  types.rs
src/se/mon/: error.rs  errors.rs  mod.rs  primitives.rs
