[package]
name = "digmake"
version = "0.1.0"
authors = ["dzil123 <5725958+dzil123@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "digmake"
path = "src/lib.rs"

[[bin]]
name = "digmake"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6.0.0", features = ["alloc"] }
serde = { version = "1.0.117", features = ["derive"] }
uuid = "0.8.1"
