[package]
name = "digmake"
version = "0.1.0"
authors = ["dzil123 <5725958+dzil123@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "digmake"
path = "src/lib.rs"

[[bin]]
name = "digmake"
path = "src/main.rs"

[[bin]]
name = "packet_inspector"
path = "src/bin/packet_inspector.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hematite-nbt = "0.5.1"
hex = "0.4.2"
md5 = "0.7.0"
nom = { version = "6.0.0", features = ["alloc"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_bytes = "0.11.5"
serde_repr = "0.1.6"
serde_yaml = "0.8.14"
thiserror = "1.0.22"
uuid = "0.8.1"
